--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cleverdeus-users",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "",
   "author": "",
   "private": true,
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "env-url http://dev.cleverdeus.com/config/development.json nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -29,8 +29,12 @@
     "@nestjs/microservices": "^8.2.3",
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "cli-color": "^2.0.1",
+    "core-types": "https://github.com/cleverdeus/core-types.git",
     "cross-env": "^7.0.3",
+    "date-fns": "^2.27.0",
+    "env-url": "^0.0.3",
     "husky": "^7.0.4",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
