--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "skipLibCheck": true,
     "typeRoots": [
       "./types",
+      "node_modules/core-types",
       "node_modules/@types"
     ]
   }
