--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cleverdeus-users",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "",
   "author": "",
   "private": true,
@@ -19,6 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "types": "yarn add https://github.com/cleverdeus/core-types.git",
     "prepare": "husky install"
   },
   "dependencies": {
