--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cleverdeus-users",
-  "version": "0.0.13",
+  "version": "0.0.14",
   "description": "",
   "author": "",
   "private": true,
@@ -12,7 +12,8 @@
     "start": "nest start",
     "start:dev": "env-url http://dev.cleverdeus.com/config/development.json nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod2": "env-url https://dev.cleverdeus.com/config/production.json nest start --watch",
+    "start:prod": "env-url https://dev.cleverdeus.com/config/production.json node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
