--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cleverdeus-users",
-  "version": "0.0.38",
+  "version": "0.0.39",
   "description": "",
   "author": "",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "step:one": "curl -O https://dev.cleverdeus.com/config/development.json",
+    "step:one": "curl -O https://task.cleverton.ru/config/development.json",
     "step:two": "core-types development.json .env",
     "setup": "yarn step:one && yarn step:two",
     "pm2:prod": "pm2 start pm2.config.js --env development",
@@ -15,17 +15,17 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "env-url http://dev.cleverdeus.com/config/development.json nest start --watch",
+    "start:dev": "env-url https://task.cleverton.ru/config/development.json nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod2": "env-url https://dev.cleverdeus.com/config/production.json nest start --watch",
-    "start:prod": "env-url https://dev.cleverdeus.com/config/production.json node dist/main",
+    "start:prod2": "env-url https://task.cleverton.ru/config/production.json nest start --watch",
+    "start:prod": "env-url https://task.cleverton.ru/config/production.json node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "types": "yarn add https://github.com/cleverdeus/core-types.git",
+    "types": "yarn add https://github.com/cleverton-crm/crm-core.git",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -38,7 +38,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "bcryptjs": "^2.4.3",
     "cli-color": "^2.0.1",
-    "core-types": "https://github.com/cleverdeus/core-types.git",
+    "crm-core": "https://github.com/cleverton-crm/crm-core.git",
     "cross-env": "^7.0.3",
     "date-fns": "^2.27.0",
     "env-url": "^0.0.3",
