--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cleverdeus-users",
-  "version": "0.0.40",
+  "name": "crm-users",
+  "version": "0.0.41",
   "description": "",
   "author": "",
   "private": true,
