--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crm-users",
-  "version": "0.0.45",
+  "version": "0.0.46",
   "description": "",
   "author": "",
   "private": true,
@@ -19,6 +19,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod2": "env-url https://task.cleverton.ru/config/production.json nest start --watch",
     "start:prod": "env-url https://task.cleverton.ru/config/production.json node dist/main",
+    "doc": "npx @compodoc/compodoc -p tsconfig.json -s",
+    "typedoc": "typedoc --entryPointStrategy expand ./src",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,6 +31,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@compodoc/compodoc": "^1.1.16",
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.1.5",
     "@nestjs/core": "^8.0.0",
@@ -50,6 +53,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "typedoc": "^0.22.10",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
