Фикс package.json

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "crm-users",
-  "version": "0.0.59",
+  "version": "0.0.60",
   "description": "",
   "author": "",
   "private": true,
   "license": "MIT",
   "scripts": {
-    "step:one": "curl -O https://task.cleverton.ru/config/development.json",
+    "step:one": "curl -O https://app.cleverton.ru/config/development.json",
     "step:two": "node scripts/index.js development.json .env",
     "setup": "yarn step:one && yarn step:two",
     "pm2:prod": "pm2 start pm2.config.js --env development",
@@ -15,10 +15,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "env-url https://task.cleverton.ru/config/development.json nest start --watch",
+    "start:dev": "env-url https://app.cleverton.ru/config/development.json nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod2": "env-url https://task.cleverton.ru/config/production.json nest start --watch",
-    "start:prod": "env-url https://task.cleverton.ru/config/production.json node dist/main",
+    "start:prod2": "env-url https://app.cleverton.ru/config/production.json nest start --watch",
+    "start:prod": "env-url https://app.cleverton.ru/config/production.json node dist/main",
     "doc": "npx @compodoc/compodoc -p tsconfig.json -s",
     "typedoc": "typedoc --entryPointStrategy expand ./src",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
